fixing error in internship description

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           <div class="col-md-6">
             <h6>Career</h6>
              <h2>Master Thesis Opportunity at NBT Analytics and Vrije Universiteit Amsterdam</h2>
-                       <p align="justify">NBT Analytics is looking to upgrade the technology, this will include testing and upgrading existing features, developing new functions for data characterization, statistical tests and visualization, and more. In this project there is room to have your own input. What???s more, there is the strong possibility that upon completion of the project, you will be offered a fulltime job at the company.</p>
+                       <p align="justify">NBT Analytics is looking to upgrade the technology, this will include testing and upgrading existing features, developing new functions for data characterization, statistical tests and visualization, and more. In this project there is room to have your own input. There is the strong possibility that upon completion of the project, you will be offered a fulltime job at the company.</p>
 						<p align="justify"> Do you match the description and are interested in what we do?</p> 
 						<p>Please send us a motivated email to <a style="color:#FFF" href="mailto:backhouse.kate@nbt-analytics.com">backhouse.kate@nbt-analytics.com </a> including the following attachments:</p>
 						<p>
@@ -353,7 +353,6 @@
 						</li><li>Desired start & end dates of project<br>
 						</li></p>
 						<p align="justify">This position in based in Amsterdam at the Vrije Universiteit and candidates must therefore live in suitable proximity, the internship is based on 36-40 hours a week for 4-6 months.</p>
-
 			</div>
 				
           <div class="col-md-6">
@@ -376,9 +375,9 @@
 				<li>Supervision of academic content and project management</li>
 				<li>Development of advanced MATLAB/NBT</li>
 				<li>Learning to work in a team to develop complex software packages</li>
-				<li>A great social environment</li>
 				<li>Opportunity to be part of a quickly expanding and dynamic medtech startup</li>
 				<li>Opportunity to have real input in the technology and company</li>
+                <li>A great social environment</li>
 			</ul>
           </div>
         </div>
