--- a/index.html
+++ b/index.html
@@ -240,9 +240,10 @@
                 <h2>Beyond single biomarkers</h2>
                 <p align="justify">EEG can be parameterized in multiple biomarkers that often carry complementary sensitivity to drug- or disease-induced changes in brain activity. By combining multiple biomarkers into a single index, we achieve a greater accuracy of classifying the presence of such effects compared to a single-biomarker based analysis (see Figure 2, simulated data).</p>
                 <p align="justify">NBT Analytics has developed an EEG analysis pipeline that identifies the right combination of multiple biomarkers and integrates these biomarkers into an index highly sensitive to a specific intervention or patient group<sup>5</sup>. The integrated index can for example be used for prognostic purposes or provide a single-value quantification of drug effects for dosage studies.</p>
-                <p align="justify"> Recently we have developed a cholinergic index sensitive to effects of drugs on the muscarinic acetylcholine receptors. The cholinergic system has been implicated in several disorders, such as, dementia, Parkinson's disease, and autism spectrum disorders.</p>
+                <p align="justify"> Recently we have developed a cholinergic index sensitive to effects of drugs on the muscarinic acetylcholine receptors<sup>6</sup>. The cholinergic system has been implicated in several disorders, such as, dementia, Parkinson's disease, and autism spectrum disorders.</p>
                 <ol start="5" class="refs">
                     <li><a href="http://journal.frontiersin.org/article/10.3389/fnagi.2013.00058/full" target="_blank">Poil et al. (2013). Integrative EEG biomarkers predict progression to Alzheimer's disease at the MCI stage. Frontiers Aging Neuroscience 5:58.</a></li>
+                    <li><a href="https://www.nature.com/articles/s41598-017-06165-4" target="_blank">Simpraga et al. (2017). EEG machine learning for accurate detection of cholinergic intervention and Alzheimer’s disease. Scientific Reports 7, Article number: 5775. </a></li>
                 </ol>
             </div>
             <div class="col-md-6">
