--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <h2>July, 2017</h2>
                 <h2>EEG machine learning for accurate detection of cholinergic intervention and Alzheimer’s disease</h2>
                 <p align="justify">
-                    We have published an article describing our cholinergic and Alzheimer's diesease indices. Simpraga et al, Scientific Reports 7, Article number: 5775 (2017). <a href="https://www.nature.com/articles/s41598-017-06165-4"> Read the article here </a>.
+                    We have published an article describing our cholinergic and Alzheimer's diesease indices. Simpraga et al, Scientific Reports 7, Article number: 5775 (2017). Read the article <a href="https://www.nature.com/articles/s41598-017-06165-4">here</a>.
             </div>
             
            
