adding Hilgo to the team

--- a/index.html
+++ b/index.html
@@ -405,6 +405,13 @@
                         <div class="position">Chief Technology Officer</div>
                     </div>
                 </div>
+		<div class="person">
+		    <img src="img/head-thumbs-hb.png">
+		    <div class="profile">
+                        <div class="name">Dr. Hilgo Bruining, MD</div>
+                        <div class"position">Child Psychiatrist</div>
+		    </div>
+		</div>			
                 <div class="person">
                     <img src="img/head-thumbs-rz.png">
                     <div class="profile">
