updated Hilgo's title

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 		    <img src="img/head-thumbs-hb.png">
 		    <div class="profile">
                         <div class="name">Dr. Hilgo Bruining, MD</div>
-                        <div class"position">Child Psychiatrist</div>
+                        <div class"position">Chief Medical Officer</div>
 		    </div>
 		</div>			
                 <div class="person">
